--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>💗 Love u 💗</title>
+    <title>💗 Love 小檀 💗</title>
  
     <style>
       html,
@@ -108,7 +108,7 @@
     <canvas id="pinkboard"></canvas>
   
     <!-- 加名字的时候请替换xxx部分 -->
-    <div id="name">捷捷</div> //这里为显示名字，替换就行
+    <div id="name">小檀</div> //这里为显示名字，替换就行
     <script>
       /*
        * Settings
